@@ -7,7 +7,7 @@
  *
  *          http://opensource.org/licenses/mit-license.php
  */
-package kiss.xml;
+package kiss.xml.traverse;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,155 +17,150 @@ import org.junit.jupiter.api.Test;
 import kiss.I;
 import kiss.XML;
 
-public class NextTest {
+public class PrevTest {
 
     /**
-     * @see XML#next()
+     * @see XML#prev()
      */
     @Test
-    public void next() {
+    public void prev() {
         XML root = I.xml("""
                 <root>
                     <first/>
-                    <center/>
                     text is ignored
+                    <center/>
                     <last/>
                 </root>
                 """);
 
-        XML next1 = root.find("first").next();
-        assert next1.name().equals("center");
+        XML prev1 = root.find("last").prev();
+        assert prev1.name().equals("center");
 
-        XML next2 = root.find("center").next();
-        assert next2.name().equals("last");
+        XML prev2 = root.find("center").prev();
+        assert prev2.name().equals("first");
 
-        XML next3 = root.find("last").next();
-        assert next3.size() == 0;
+        XML prev3 = root.find("first").prev();
+        assert prev3.size() == 0;
     }
 
     @Test
-    public void nextFromSingleElement() {
+    public void prevFromSingleElement() {
         XML xml = I.xml("""
                 <root>
                     <sibling1/>
                     <target/>
-                    <sibling2 class="next-marker"/>
+                    <sibling2/>
                 </root>
                 """);
         XML target = xml.find("target");
 
-        XML next = target.next();
-        assert next.size() == 1;
-        assert next.hasClass("next-marker");
-        assert next.name().equals("sibling2");
+        XML prev = target.prev();
+        assert prev.size() == 1;
+        assert prev.name().equals("sibling1");
     }
 
     @Test
-    public void nextIgnoringIntermediateTextNodes() {
+    public void prevIgnoringIntermediateTextNodes() {
         XML xml = I.xml("""
                 <root>
-                    <target/>
+                    <sibling1/>
                     text node
-                    <sibling1 class="next-marker"/>
+                    <target/>
                 </root>
                 """);
         XML target = xml.find("target");
 
-        XML next = target.next();
-        assert next.size() == 1;
-        assert next.hasClass("next-marker");
-        assert next.name().equals("sibling1");
+        XML prev = target.prev();
+        assert prev.size() == 1;
+        assert prev.name().equals("sibling1");
     }
 
     @Test
-    public void nextIgnoringIntermediateCommentNodes() {
+    public void prevIgnoringIntermediateCommentNodes() {
         XML xml = I.xml("""
                 <root>
-                    <target/>
+                    <sibling1/>
                     <!-- comment node -->
-                    <sibling1 class="next-marker"/>
+                    <target/>
                 </root>
                 """);
         XML target = xml.find("target");
 
-        XML next = target.next();
-        assert next.size() == 1;
-        assert next.hasClass("next-marker");
-        assert next.name().equals("sibling1");
+        XML prev = target.prev();
+        assert prev.size() == 1;
+        assert prev.name().equals("sibling1");
     }
 
     @Test
-    public void nextIgnoringMultipleIntermediateNonElementNodes() {
+    public void prevIgnoringMultipleIntermediateNonElementNodes() {
         XML xml = I.xml("""
                 <root>
-                    <target/>
+                    <sibling1/>
                     text1
                     <!-- comment1 -->
                     <?pi instruction?>
                     text2
                     <!-- comment2 -->
                     <![CDATA[cdata]]>
-                    <sibling1 class="next-marker"/>
-                </root>
-                """);
-        XML target = xml.find("target");
-
-        XML next = target.next();
-        assert next.size() == 1;
-        assert next.hasClass("next-marker");
-        assert next.name().equals("sibling1");
-    }
-
-    @Test
-    public void nextWhenImmediateNextIsElement() {
-        XML xml = I.xml("""
-                <root>
-                    text node
                     <target/>
-                    <sibling1 class="next-marker"/>
                 </root>
                 """);
         XML target = xml.find("target");
 
-        XML next = target.next();
-        assert next.size() == 1;
-        assert next.hasClass("next-marker");
-        assert next.name().equals("sibling1");
+        XML prev = target.prev();
+        assert prev.size() == 1;
+        assert prev.name().equals("sibling1");
     }
 
     @Test
-    public void nextWhenNoNextSiblingElementOnlyNonElement() {
-        XML xml = I.xml("""
-                <root>
-                    <target/>
-                    text node
-                    <!-- comment node -->
-                    <?pi instruction?>
-                    <![CDATA[cdata]]>
-                </root>
-                """);
-        XML target = xml.find("target");
-
-        XML next = target.next();
-        assert next.size() == 0;
-    }
-
-    @Test
-    public void nextWhenNoNextSiblingAtAllAsLastChild() {
+    public void prevWhenImmediatePrevIsElement() {
         XML xml = I.xml("""
                 <root>
                     <sibling1/>
                     <target/>
+                    text node
                 </root>
                 """);
         XML target = xml.find("target");
 
-        XML next = target.next();
-        assert next.size() == 0;
+        XML prev = target.prev();
+        assert prev.size() == 1;
+        assert prev.name().equals("sibling1");
     }
 
     @Test
-    public void nextWhenOnlyChild() {
+    public void prevWhenNoPrevSiblingElementOnlyNonElement() {
+        XML xml = I.xml("""
+                <root>
+                    text node
+                    <!-- comment node -->
+                    <?pi instruction?>
+                    <![CDATA[cdata]]>
+                    <target/>
+                </root>
+                """);
+        XML target = xml.find("target");
+
+        XML prev = target.prev();
+        assert prev.size() == 0;
+    }
+
+    @Test
+    public void prevWhenNoPrevSiblingAtAllAsFirstChild() {
+        XML xml = I.xml("""
+                <root>
+                    <target/>
+                    <sibling2/>
+                </root>
+                """);
+        XML target = xml.find("target");
+
+        XML prev = target.prev();
+        assert prev.size() == 0;
+    }
+
+    @Test
+    public void prevWhenOnlyChild() {
         XML xml = I.xml("""
                 <root>
                     <target/>
@@ -173,111 +168,110 @@ public class NextTest {
                 """);
         XML target = xml.find("target");
 
-        XML next = target.next();
-        assert next.size() == 0;
+        XML prev = target.prev();
+        assert prev.size() == 0;
     }
 
     @Test
-    public void nextFromMultipleElementsEachHavingNext() {
+    public void prevFromMultipleElementsEachHavingPrev() {
         XML xml = I.xml("""
                 <doc>
                     <section>
+                        <s1a class='prev-marker'/>
                         <t1 class='target'/>
-                        <s1a class='next-marker'/>
+                        <s1b/>
                         <t1_ignored/>
                     </section>
                     <section>
+                        <s2a class='prev-marker'/>
                         <t2 class='target'/>
-                        text
-                        <s2a class='next-marker'/>
+                        <s2b/>
+                        <t2_ignored/>
                     </section>
                 </doc>
                 """);
         XML targets = xml.find(".target");
         assert targets.size() == 2;
 
-        XML nexts = targets.next();
-        assert nexts.size() == 2;
+        XML prevs = targets.prev();
+        assert prevs.size() == 2;
 
-        List<XML> nextList = I.signal(nexts).toList();
-        List<String> nextNames = nextList.stream().map(XML::name).collect(Collectors.toList());
-        assert nextNames.contains("s1a");
-        assert nextNames.contains("s2a");
-        assert nextList.stream().allMatch(x -> x.hasClass("next-marker"));
+        List<XML> prevList = I.signal(prevs).toList();
+        List<String> prevNames = prevList.stream().map(XML::name).collect(Collectors.toList());
+        assert prevNames.contains("s1a");
+        assert prevNames.contains("s2a");
+        assert prevList.stream().allMatch(x -> x.hasClass("prev-marker"));
     }
 
     @Test
-    public void nextFromMultipleElementsSomeWithNoNext() {
+    public void prevFromMultipleElementsSomeWithNoPrev() {
         XML xml = I.xml("""
                 <doc>
                     <section>
                         <t1 class='target'/>
-                        <s1a class='next-marker'/>
                     </section>
                     <section>
+                        <s2a class='prev-marker'/>
                         <t2 class='target'/>
                     </section>
                     <section>
-                        <t3 class='target'/>
-                        <!-- comment -->
                         text node
-                        <s3a class='next-marker'/>
+                        <s3a class='prev-marker'/>
+                        <!-- comment -->
+                        <t3 class='target'/>
                     </section>
                     <section>
-                        <t4 class='target'/>
                         <!-- only comment -->
+                        <t4 class='target'/>
                     </section>
                     <section>
-                        <t5 class='target'/>
+                        <s5a class='prev-marker-not-direct'/>
                         <another/>
-                        <s5a class='next-marker-not-direct'/>
+                        <t5 class='target'/>
                     </section>
                 </doc>
                 """);
         XML targets = xml.find(".target");
         assert targets.size() == 5;
 
-        XML nexts = targets.next();
-        assert nexts.size() == 3; // s1a, s3a, and 'another' for t5
-
-        List<String> nextNames = I.signal(nexts).map(XML::name).toList();
-        assert nextNames.contains("s1a");
-        assert nextNames.contains("s3a");
-        assert nextNames.contains("another");
+        XML prevs = targets.prev();
+        assert prevs.size() == 3;
     }
 
     @Test
-    public void nextAtEmptySet() {
+    public void prevAtEmptySet() {
         XML xml = I.xml("<root/>");
         XML emptySet = xml.find(".nonexistent");
         assert emptySet.size() == 0;
 
-        XML next = emptySet.next();
-        assert next.size() == 0;
+        XML prev = emptySet.prev();
+        assert prev.size() == 0;
     }
 
     @Test
-    public void nextWithinDifferentParentsNotInterfering() {
+    public void prevWithinDifferentParentsNotInterfering() {
         XML xml = I.xml("""
                 <doc>
+                    <outer_sibling class='prev-marker-outer'/>
                     <parent1>
+                        <s1a class='prev-marker-inner'/>
+                        text
                         <t1 class='target'/>
-                        <!-- comment -->
-                        <s1a class='next-marker-inner'/>
                     </parent1>
                     <parent2>
-                        <s2_before/>
+                        <!-- comment -->
                         <t2 class='target'/>
+                        <s2_after/>
                     </parent2>
-                    <outer_sibling class='next-marker-outer'/>
                 </doc>
                 """);
         XML targets = xml.find(".target");
         assert targets.size() == 2;
 
-        XML nexts = targets.next();
-        assert nexts.size() == 1;
-        assert nexts.hasClass("next-marker-inner");
-        assert nexts.name().equals("s1a");
+        XML prevs = targets.prev();
+
+        assert prevs.size() == 1;
+        assert prevs.hasClass("prev-marker-inner");
+        assert prevs.name().equals("s1a");
     }
 }
